[gd_scene load_steps=6 format=3 uid="uid://dkh5gq20djuhr"]

[ext_resource type="Script" uid="uid://ms685kps75dw" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://db7wio6vm02uj" path="res://scripts/player_interaction_zone.gd" id="2_g2els"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_3vyb7"]
height = 1.5582886
radius = 0.41210938

[sub_resource type="CylinderShape3D" id="CylinderShape3D_g2els"]
height = 0.5
radius = 0.39

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qhqgy"]
height = 2.5
radius = 0.9

[node name="player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_3vyb7")
dash_duration = 0.35
dash_cooldown = 1.0
dash_gravity_multiplier = 0.5
post_dash_gravity_multiplier = 1.5
post_dash_gravity_duration = 0.15
inertia_multiplier = 1.5

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0042419434, 0)
shape = SubResource("CylinderShape3D_3vyb7")

[node name="CameraPivot" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0631309, 0.41802508)
collision_mask = 5

[node name="Camera3D" type="Camera3D" parent="CameraPivot/SpringArm3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.9322291, 0.36186865, 0, -0.36186865, 0.9322291, 0, 0.49052882, 0.2607944)

[node name="Raycasts" type="Node3D" parent="CameraPivot"]

[node name="WallRaycastForward" type="RayCast3D" parent="CameraPivot/Raycasts"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)
collision_mask = 5

[node name="WallRaycastRight" type="RayCast3D" parent="CameraPivot/Raycasts"]
unique_name_in_owner = true
transform = Transform3D(-4.371139e-08, -1, -4.371139e-08, 0, -4.371139e-08, 1, -1, 4.371139e-08, 1.9106855e-15, 0, 0, 0)
collision_mask = 5

[node name="WallRaycastLeft" type="RayCast3D" parent="CameraPivot/Raycasts"]
unique_name_in_owner = true
transform = Transform3D(-4.371139e-08, 1, 4.371139e-08, 0, -4.371139e-08, 1, 1, 4.371139e-08, 1.9106855e-15, 0, 0, 0)
collision_mask = 5

[node name="CrouchShapeCast" type="ShapeCast3D" parent="CameraPivot/Raycasts"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -1, -8.742278e-08, 0, 8.742278e-08, -1, 0, 0, 0)
shape = SubResource("CylinderShape3D_g2els")
collision_mask = 7

[node name="character" type="Node3D" parent="."]

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="character"]
radius = 0.38720703
height = 1.5

[node name="PlayerInteractionZone" type="Area3D" parent="."]
script = ExtResource("2_g2els")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerInteractionZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.01977539, 0)
shape = SubResource("CylinderShape3D_qhqgy")

[connection signal="area_entered" from="PlayerInteractionZone" to="." method="_on_player_interaction_zone_area_entered"]
